# orodruin-editor

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md
orodruin_editor/: __init__.py  editor_window.py  graphics_component.py  graphics_connection.py  graphics_node.py  graphics_port.py  graphics_scene.py  graphics_view.py  main.py
orodruin_editor/core/: __init__.py  deserializer.py  serializer.py
orodruin_editor/gui/: editor_window.py
orodruin_editor/gui/editor/: component_list_view.py  graphics_component.py  graphics_component_name.py  graphics_connection.py  graphics_graph.py  graphics_port.py  graphics_scene.py  graphics_socket.py  graphics_view.py
orodruin_editor/gui/models/: component_list_model.py
orodruin_editor/models/: node_list_model.py
orodruin_editor/ui/: __init__.py  node_list_view.py  window.py
orodruin_editor/ui/editor/: __init__.py  graphics_connection.py  graphics_graph.py  graphics_node.py  graphics_state.py  graphics_view.py
orodruin_editor/ui/editor/dialogs/: create_port_dialog.py
orodruin_editor/ui/editor/graphics_items/: graphics_connection.py  graphics_node.py  graphics_node_name.py  graphics_port.py  graphics_socket.py  port_layout.py
orodruin_editor/ui/editor/graphics_layouts/: __init__.py  layout_item.py  vertical_graphics_layout.py
snippets/: profile_editor.py
