[tool.poetry]
name = "orodruin-editor"
version = "0.1.0"
description = ""
authors = ["Loïc Pinsard <muream@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
PySide2 = "^5.15.2"
orodruin = {path = "../orodruin", develop = true}

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
