[tool.poetry]
name = "orodruin-editor"
version = "0.1.0"
description = ""
authors = ["Loïc Pinsard <muream@gmail.com>", "Aphosis <aphosis.github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
PySide2 = {version = "^5.15.2", optional = true}
orodruin = {path = "../orodruin", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.9.3"
pylint = "^2.10.2"
snakeviz = "^2.1.0"

[tool.poetry.extras]
PySide2 = ["PySide2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 88
extension-pkg-whitelist = "PySide2"
disable = [
    "duplicate-code",
    "fixme",
    "import-error",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "invalid-name",
]
